--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
       <version>1.26.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.heybcat</groupId>
+      <artifactId>TightlyWebCore</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
