--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,18 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version> <!-- 确保使用适当的插件版本 -->
+        <configuration>
+          <source>11</source> <!-- Java 源代码版本 -->
+          <target>11</target> <!-- 生成的字节码版本 -->
+          <compilerArgs>
+            <arg>-parameters</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>2.3</version>
         <executions>
