feat(pom): add JSch dependency for SFTP support
Introduce the JSch library as a dependency in the pom.xml to enable SFTP functionality.
This is a necessary addition for handling file transfers over SFTP in our application.

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
       <version>5.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.jcraft</groupId>
+      <artifactId>jsch</artifactId>
+      <version>0.1.55</version>
+    </dependency>
+
   </dependencies>
   <repositories>
     <repository>
