--- a/config
+++ b/config
@@ -1,7 +1,8 @@
 proxyHost:127.0.0.1
 proxyPort:7890
-sshHost:111.111.111.111
+sshHost:11.111.111.11
 sshPort:22
 sshUser:root
-sshPassword:123456
-sshSavePath:/home
+sshPassword:xxxxxx
+sshSavePath:/home/test
+isLoadImage:true
