--- a/config
+++ b/config
@@ -1,9 +1,9 @@
 proxyHost:127.0.0.1
-proxyPort:7890
+proxyPort:7897
 sshHost:11.111.111.11
 sshPort:22
 sshUser:root
-sshPassword:xxxxxx
+sshPassword:_++___++_++___++_++___++_++___++_++___++_++___++
 sshSavePath:/home/test
 isLoadImage:true
 authKey:123456
