feat(issue#7): Implement pulling images from different image repositories.
What's new?
1. Refactor the image pulling code and logic to support pulling from different image sources.
2. Refactor the packaging logic for layers.
3.Improved command interaction and download progress display.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>xyz.ldqc</groupId>
   <artifactId>DockerPull</artifactId>
-  <version>web-1.0</version>
+  <version>web-1.3</version>
 
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
@@ -76,6 +76,12 @@
       <groupId>com.jcraft</groupId>
       <artifactId>jsch</artifactId>
       <version>0.1.55</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.34</version>
+      <scope>provided</scope>
     </dependency>
 
   </dependencies>
